--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    <p>Feito pelo 3ºDs do colégio <a href="https://www.colegioregentefeijo.com.br/">Regente Feijó</a> | 2025</p>
+    <p>Feito pelo 3ºDs do colégio <a href="https://regente-teste.onrender.com/">Regente Feijó</a> | 2025</p>
   </footer>
 </body>
 </html>
